--- a/index.html
+++ b/index.html
@@ -11,8 +11,69 @@
 
     <header>
         <h1>My Anime Fight DB</h1>
-        <h2>A Database that consists of heroes and villains from the world of Anime, going head to head!</h2>
+        <h2>A Database That Consists Of Heroes and Villains From The World of Anime, Going Head to Head!</h2>
     </header>
+
+    <section class="containter">
+        <div class="card">
+            <h3>Step 1: Creating the Database</h3>
+            <button onclick="imageOne()" class="sqlb">SQL Code</button>
+            <button onclick="imageOnePV()" class="pvb">Preview</button>
+            <div id="img1"><img src="/Anime-Fight-Database/images/Creating Db.png" alt=""></div>
+            <div id="img1pv"><img src="/Anime-Fight-Database/images/Creating Db PV.png" alt=""></div>
+        </div>
+
+        <div class="card">
+            <h3>Step 2: Creating the Tables</h3>
+            <div id="img2"><img src="/Anime-Fight-Database/images/Create table.png" alt=""></div>
+            <div id="img2pv"><img src="/Anime-Fight-Database/images/Create table FK.png" alt=""></div>
+        </div>
+
+        <div class="card">
+            <h3>Step 3: List All Tables</h3>
+            <button onclick="image3()" class="sqlb">SQL Code</button>
+            <button onclick="image3PV()" class="pvb">Preview</button>
+            <div id="img3"><img src="/Anime-Fight-Database/images/List all tables.png" alt=""></div>
+            <div id="img3apv"><img src="/Anime-Fight-Database/images/tbl hero PV.png" alt=""></div>
+            <div id="img3bpv"><img src="/Anime-Fight-Database/images/tbl villains PV.png" alt=""></div>
+            <div id="img3cpv"><img src="/Anime-Fight-Database/images/tbl fight PV.png" alt=""></div>
+            <div id="img3dpv"><img src="/Anime-Fight-Database/images/tbl hero record PV.png" alt=""></div>
+            <div id="img3epv"><img src="/Anime-Fight-Database/images/tbl villain record PV.png" alt=""></div>
+        </div>
+
+        <div class="card">
+            <h3>Step 4: Updating a Table</h3>
+            <button onclick="image4()" class="sqlb">SQL Code</button>
+            <button onclick="image4PV()" class="pvb">Preview</button>
+            <div id="img4"><img src="/Anime-Fight-Database/images/tbl update prompt.png" alt=""></div>
+            <div id="img4apv"><img src="/Anime-Fight-Database/images/tbl hero PV.png" alt=""></div>
+            <div id="img4bpv"><img src="/Anime-Fight-Database/images/tbl update prompt PV.png" alt=""></div>
+        </div>
+
+        <div class="card">
+            <h3>Step 5: Creating A View</h3>
+            <button onclick="image5()" class="sqlb">SQL Code</button>
+            <button onclick="image5PV()" class="pvb">Preview</button>
+            <div id="img5"><img src="/Anime-Fight-Database/images/hero villain match up view.png" alt=""></div>
+            <div id="img5pv"><img src="/Anime-Fight-Database/images/hero villain match up view PV.png" alt=""></div>
+        </div>
+
+        <div class="card">
+            <h3>Step 6: Creating A Procedure</h3>
+            <button onclick="image6()" class="sqlb">SQL Code</button>
+            <button onclick="image6PV()" class="pvb">Preview</button>
+            <div id="img6"><img src="/Anime-Fight-Database/images/new fight procedure.png" alt=""></div>
+            <div id="img6pv"><img src="/Anime-Fight-Database/images/new fight procedure PV.png" alt=""></div>
+        </div>
+
+        <div class="card">
+            <h3>Step 7: Creating A Case Statement</h3>
+            <button onclick="image7()" class="sqlb">SQL Code</button>
+            <button onclick="image7PV()" class="pvb">Preview</button>
+            <div id="img7"><img src="/Anime-Fight-Database/images/Case statement.png" alt=""></div>
+            <div id="img7pv"><img src="/Anime-Fight-Database/images/case statement hero PV.png" alt=""></div>
+        </div>
+    </section>
     
 </body>
 </html>
