--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <button onclick="imageOne()" class="sqlb">SQL Code</button>
             <button onclick="imageOnePV()" class="pvb">Preview</button>
             <div class="imgEdit">
-                <div id="img1"><img src="/Anime-Fight-Database/images/Creating Db.png" alt=""></div>
-                <div id="img1pv"><img src="/Anime-Fight-Database/images/Creating Db PV.png" alt=""></div>
+                <div id="img1"><img src="./images/Creating Db.png" alt=""></div>
+                <div id="img1pv"><img src="./images/Creating Db PV.png" alt=""></div>
             </div>
             
         </div>
@@ -29,11 +29,11 @@
         <div class="container">
             <h3>Step 2: Creating the Tables</h3>
             <div class="imgEdit">
-                <div id="img2apv" class="img2"><img src="/Anime-Fight-Database/images/Create table.png" alt=""></div>
-                <div id="img2bpv" class="img2"><img src="/Anime-Fight-Database/images/create tbl villain.png" alt=""></div>
-                <div id="img2cpv" class="img2"><img src="/Anime-Fight-Database/images/Create table FK.png" alt=""></div>
-                <div id="img2dpv" class="img2"><img src="/Anime-Fight-Database/images/create tbl hero record.png" alt=""></div>
-                <div id="img2epv" class="img2"><img src="/Anime-Fight-Database/images/create tbl villain record.png" alt=""></div>
+                <div id="img2apv" class="img2"><img src="./images/Create table.png" alt=""></div>
+                <div id="img2bpv" class="img2"><img src="./images/create tbl villain.png" alt=""></div>
+                <div id="img2cpv" class="img2"><img src="./images/Create table FK.png" alt=""></div>
+                <div id="img2dpv" class="img2"><img src="./images/create tbl hero record.png" alt=""></div>
+                <div id="img2epv" class="img2"><img src="./images/create tbl villain record.png" alt=""></div>
             </div>
         </div>
 
@@ -42,23 +42,23 @@
             <button onclick="image3()" class="sqlb">SQL Code</button>
             <button onclick="image3PV()" class="pvb">Preview</button>
             <div class="imgEdit">
-                <div id="img3"><img src="/Anime-Fight-Database/images/List all tables.png" alt=""></div>
-                <div id="img3apv"><img src="/Anime-Fight-Database/images/tbl hero PV.png" alt=""></div>
-                <div id="img3bpv"><img src="/Anime-Fight-Database/images/tbl villains PV.png" alt=""></div>
-                <div id="img3cpv"><img src="/Anime-Fight-Database/images/tbl fight PV.png" alt=""></div>
-                <div id="img3dpv"><img src="/Anime-Fight-Database/images/tbl hero record PV.png" alt=""></div>
-                <div id="img3epv"><img src="/Anime-Fight-Database/images/tbl villain record PV.png" alt=""></div>
+                <div id="img3"><img src="./images/List all tables.png" alt=""></div>
+                <div id="img3apv"><img src="./images/tbl hero PV.png" alt=""></div>
+                <div id="img3bpv"><img src="./images/tbl villains PV.png" alt=""></div>
+                <div id="img3cpv"><img src="./images/tbl fight PV.png" alt=""></div>
+                <div id="img3dpv"><img src="./images/tbl hero record PV.png" alt=""></div>
+                <div id="img3epv"><img src="./images/tbl villain record PV.png" alt=""></div>
             </div>
         </div>
 
         <div class="container">
-            <h3>Step 4: Updating a Table</h3>
+            <h3>Step 4: Updating A Table</h3>
             <button onclick="image4()" class="sqlb">SQL Code</button>
             <button onclick="image4PV()" class="pvb">Preview</button>
             <div class="imgEdit">
-                <div id="img4"><img src="/Anime-Fight-Database/images/tbl update prompt.png" alt=""></div>
-                <div id="img4apv"><img src="/Anime-Fight-Database/images/tbl hero PV.png" alt=""></div>
-                <div id="img4bpv"><img src="/Anime-Fight-Database/images/tbl update prompt PV.png" alt=""></div>
+                <div id="img4"><img src="./images/tbl update prompt.png" alt=""></div>
+                <div id="img4apv"><img src="./images/tbl hero PV.png" alt=""></div>
+                <div id="img4bpv"><img src="./images/tbl update prompt PV.png" alt=""></div>
             </div>
         </div>
             
@@ -68,12 +68,12 @@
             <button onclick="image5()" class="sqlb">SQL Code</button>
             <button onclick="image5PV()" class="pvb">Preview</button>
             <div class="imgEdit">
-                <div id="img5a"><img src="/Anime-Fight-Database/images/hero villain match up view.png" alt=""></div>
-                <div id="img5b"><img src="/Anime-Fight-Database/images/hero total fights view.png" alt=""></div>
-                <div id="img5c"><img src="/Anime-Fight-Database/images/villain total fights view.png" alt=""></div>
-                <div id="img5apv"><img src="/Anime-Fight-Database/images/hero villain match up view PV.png" alt=""></div>
-                <div id="img5bpv"><img src="/Anime-Fight-Database/images/hero total fights view PV.png" alt=""></div>
-                <div id="img5cpv"><img src="/Anime-Fight-Database/images/villain total fights view PV.png" alt=""></div>
+                <div id="img5a"><img src="./images/hero villain match up view.png" alt=""></div>
+                <div id="img5b"><img src="./images/hero total fights view.png" alt=""></div>
+                <div id="img5c"><img src="./images/villain total fights view.png" alt=""></div>
+                <div id="img5apv"><img src="./images/hero villain match up view PV.png" alt=""></div>
+                <div id="img5bpv"><img src="./images/hero total fights view PV.png" alt=""></div>
+                <div id="img5cpv"><img src="./images/villain total fights view PV.png" alt=""></div>
             </div>
         </div>
 
@@ -82,8 +82,8 @@
             <button onclick="image6()" class="sqlb">SQL Code</button>
             <button onclick="image6PV()" class="pvb">Preview</button>
             <div class="imgEdit">
-                <div id="img6"><img src="/Anime-Fight-Database/images/new fight procedure.png" alt=""></div>
-                <div id="img6pv"><img src="/Anime-Fight-Database/images/new fight procedure PV.png" alt=""></div>
+                <div id="img6"><img src="./images/new fight procedure.png" alt=""></div>
+                <div id="img6pv"><img src="./images/new fight procedure PV.png" alt=""></div>
             </div>
         </div>
 
@@ -92,14 +92,14 @@
             <button onclick="image7()" class="sqlb">SQL Code</button>
             <button onclick="image7PV()" class="pvb">Preview</button>
             <div class="imgEdit">
-                <div id="img7"><img src="/Anime-Fight-Database/images/Case statement.png" alt=""></div>
-                <div id="img7pv"><img src="/Anime-Fight-Database/images/case statement hero PV.png" alt=""></div>
+                <div id="img7"><img src="./images/Case statement.png" alt=""></div>
+                <div id="img7pv"><img src="./images/case statement hero PV.png" alt=""></div>
             </div>
         </div>
 
         <div class="img-popup">
             <span>&times;</span>
-            <img src="/Anime-Fight-Database/images/Creating Db.png" alt="">
+            <img src="./images/Creating Db.png" alt="">
         </div>
     </section>
 
